# disk-usage

./: .gitignore  Cargo.toml  README.md  build.rs  package-lock.json  package.json  todo  tsconfig.json
.github/workflows/: rust.yml
src/: error.rs  logger.rs  main.rs  web_server.rs
src/web_server/: mod.rs  static_files_includedir.rs
src/web_server/websocket_actor/: binary_message.rs  dir.rs  mod.rs  string_message.rs  text_message.rs  tree.rs
src/web_server/websocket_actor/worker/: dir.rs  mod.rs  tree.rs  walker.rs
src/websocket_handler/: api.rs  mod.rs
src/websocket_handler/worker/: dir.rs  mod.rs  tree.rs  walker.rs
web/: App.tsx  FileSizeWorker.tsx  FileTree.tsx  FolderView.tsx  MainView.tsx  WebSocketConnection.tsx  chunk1.json  chunk2.json  chunk3.json  data.json  global.d.ts  helpers.ts  index.html  index.tsx
