[package]
name = "disk-usage"
version = "0.1.0"
authors = ["SpiralP <spiral.palmer@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.1"
env_logger = "0.7.1"
failure = "0.1.8"
fs2 = "0.4.3"
futures = "0.3.5"
includedir = { git = "https://github.com/SpiralP/includedir.git" }
jwalk = "0.5.1"
log = "0.4.8"
open = "1.4.0"
parceljs = { git = "https://github.com/SpiralP/rust-parceljs.git", features = ["warp"] }
phf = "0.8.0"
reveal = { git = "https://github.com/SpiralP/rust-reveal.git" }
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
tokio = { version = "0.2.21", features = ["full"] }
# use release when they merge try_bind_with_graceful_shutdown
# https://github.com/seanmonstar/warp/pull/465
warp = { git = "https://github.com/seanmonstar/warp.git" }

[target.'cfg(windows)'.dependencies]
remove_dir_all = "0.5.2"

[build-dependencies]
parceljs-builder = { git = "https://github.com/SpiralP/rust-parceljs.git" }

[patch.crates-io]
warp = { git = "https://github.com/seanmonstar/warp.git" }
