[package]
name = "disk-usage"
version = "0.1.0"
authors = ["SpiralP <spiral.palmer@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2"
env_logger = "0.9"
failure = "0.1"
fs2 = "0.4"
futures = "0.3"
jwalk = "0.6"
log = "0.4"
open = "1"
parceljs = { git = "https://github.com/SpiralP/rust-parceljs.git", features = ["warp"] }
phf = "0.9"
reveal = { git = "https://github.com/SpiralP/rust-reveal.git" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
warp = "0.3"

[target.'cfg(windows)'.dependencies]
remove_dir_all = "1.0"

[build-dependencies]
parceljs-builder = { git = "https://github.com/SpiralP/rust-parceljs.git" }
